[tool.poetry]
name = "get-lan-ip-telegram-bot"
version = "2.0.0"
description = "拿到區域網路 IP 並傳給你的 Telegram bot"
authors = ["hms5232 <hms5232@hhming.moe>"]
license = "MPL-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
python-telegram-bot = "12.5"
ifcfg = "^0.23"


[tool.poetry.group.dev.dependencies]
poethepoet = "^0.21.1"
flake8 = "^6.1.0"
autopep8 = "^2.0.2"


[tool.poe.tasks]
lint = "flake8 **/*.py --max-line-length=120"
format = "autopep8 **/*.py --max-line-length=120 --in-place"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
